--- a/index1.html
+++ b/index1.html
@@ -8,8 +8,8 @@
   <body>
     <table class="table1">
       <tr>
-        <td  rowspan="2" class="center"><b>Напиток</b></td>
-        <td  colspan="5" class="center"><b>Человечек</b></td>
+        <th  rowspan="2" class="center"><b>Напиток</b></th>
+        <th  colspan="5" class="center"><b>Человечек</b></th>
       </tr>
 
       <tr>
