--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <table>
-      <tr>
-        <td>Name</td>
-        <td>Item Name</td>
-        <td>Item price</td>
+      <tr class="und">
+        <th>Name</th>
+        <th>Item Name</th>
+        <th>Item price</th>
       </tr>
 
       <tr>
@@ -44,9 +44,9 @@
 
     <table class="table2">
       <tr class="und">
-        <td>Name</td>
-        <td>Item Name</td>
-        <td>Item price</td>
+        <th>Name</th>
+        <th>Item Name</th>
+        <th>Item price</th>
       </tr>
 
       <tr class="und">
