--- a/index3.html
+++ b/index3.html
@@ -6,13 +6,15 @@
 <link rel="stylesheet" href="css\style3.css">
     </head>
   <body>
+    <div class="fullwrap">
+      <button type="button" name="button" class="cross">x</button>
     <div class="table">
 <table>
-  <tr class="bold">
-    <td>Название</td>
-    <td>Кол-во</td>
-    <td>Цена</td>
-    <td>Скидка</td>
+  <tr>
+    <th>Название</th>
+    <th>Кол-во</th>
+    <th>Цена</th>
+    <th>Скидка</th>
     <td>
 
     </td>
@@ -71,9 +73,12 @@
   <td>300р.</td>
 </tr>
 </table>
+<div class="wrap">
 <p class="total">4 шт на сумму: <b>10 700р.</b></p>
 <p class="subtotal">Сумма без скидки: 11 000р. -</p>
+</div>
 <a href="#">Перейти в корзину &#10144;</a>
+</div>
 </div>
   </body>
 </html>
