--- a/index1.html
+++ b/index1.html
@@ -7,11 +7,11 @@
   </head>
   <body>
     <table class="table1">
+      <thead>
       <tr>
-        <th  rowspan="2" class="center"><b>Напиток</b></th>
-        <th  colspan="5" class="center"><b>Человечек</b></th>
+        <th  rowspan="2" class="center mid">Напиток</th>
+        <th  colspan="5" class="center">Человечек</th>
       </tr>
-
       <tr>
         <td>Незнайка</td>
         <td>Пончик</td>
@@ -19,7 +19,7 @@
         <td>Пилюлькин</td>
         <td>Всего</td>
       </tr>
-
+</thead>
       <tr>
         <td class="left">Квас,л</td>
         <td>2</td>
