--- a/index2.html
+++ b/index2.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <table>
-      <tr class="und">
+      <thead>
+        <tr class="und">
         <th>Name</th>
         <th>Item Name</th>
         <th>Item price</th>
       </tr>
-
+      </thead>
       <tr>
         <td>Alvin</td>
         <td>Eclair</td>
@@ -40,14 +41,15 @@
 
 <br>
 <br>
-
-
     <table class="table2">
+      
+      <thead>
       <tr class="und">
         <th>Name</th>
         <th>Item Name</th>
         <th>Item price</th>
       </tr>
+      </thead>
 
       <tr class="und">
         <td>Alvin</td>
