--- a/index3.html
+++ b/index3.html
@@ -10,17 +10,16 @@
       <button type="button" name="button" class="cross">x</button>
     <div class="table">
 <table>
+  <thead>
   <tr>
     <th>Название</th>
     <th>Кол-во</th>
     <th>Цена</th>
     <th>Скидка</th>
-    <td>
-
-    </td>
-    <td>Итого</td>
+    <th></th>
+    <th>Итого</th>
 </tr>
-
+</thead>
 <tr>
   <td class="red">Медведь девочка</td>
   <td>1 шт.</td>
